# ASE_Ensemble_Calculator

./: ASE_Ensemble_Calculator.ipynb  ASE_Ensemble_Calculator.py  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: pytests.yaml
ase_ensemble_calculator/: ase_ensemble_calculator.py  ensemble_calculator.py
tests/: test_ASE_Ensemble_Calculator_viaEMT.py  test_ensemble_calculator_imputs.py  test_ensemble_calculator_viaEMT.py  test_mock_calculators.py  test_relaxations.py
