[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ase_ensemble_calculator"
version = "1.0.0"
description = "Implimentation of ensemble calculator in ASE"
authors = [
  { name = "Mathias Stokkebye Nissen" },
]

readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["ase_ensemble_calculator"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
